# General-Scrapper-2

./: .env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_nodriver.py
src/: auth.py  browser.py  comments.py  config.js  config.py  contact.py  db.py  extract.py  graphql_capture.py  index.js  main.py  posts.py  urls.py
src/browser/: launch.js  login.js
src/db/: adsRepo.js  mongo.js
src/haraj/: contact.js  extract.js  fetchComments.js  graphqlCapture.js  login.js  notFound.js  scrapeAd.js  urls.js
src/utils/: mailer.js  time.js
src/workers/: dailyEmailReport.js  dailyReportEmail.js  processAd.js  refreshComments.js  scanDown.js  scanNew.js  scanOld.js  scanUp.js
