[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haraj-nodriver-scraper"
version = "0.1.0"
description = "Haraj scraper using nodriver and MongoDB"
requires-python = ">=3.10"
dependencies = [
  "nodriver>=0.50.3",
  "motor>=3.7.1",
  "pymongo>=4.13.0",
  "python-dotenv>=1.1.0",
  "pydantic-settings>=2.9.1"
]

[project.scripts]
haraj-scraper = "haraj_scraper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
